src/components/SearchBox/components/OptionsBox/optionsBox.css
.options-box {
    position: absolute;
    top: -200px;
    left: 0;
    width: 100%;
    height: 180px;
    background-color: rgba(255, 255, 255, 0.87);
    box-shadow: 0 5px 16px 0.1px rgba(183, 183, 183, 0.24);
    border-radius: 20px;
    padding: 1rem 0.5rem;
}

@keyframes fadeInBox {
    0% {
        opacity: 0;
        transform: translateY(22%) scale(0.8);
    }

    70%{
        transform: scale(1);
    }

    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

@keyframes fadeOutBox {

    0% {
        opacity: 1;
        transform: translateY(0);
    }

    25%{
        opacity: 0;
    }

    100% {
        opacity: 0;
        transform: translateY(60%) scale(0.8);
    }
}

.fade-enter {
    animation-name: fadeInBox;
    animation-duration: 700ms;
    animation-iteration-count: 1;
}

/*.fade-enter-active {*/
/*}*/

.fade-exit {
    animation-name: fadeOutBox;
    animation-duration: 700ms;
    animation-iteration-count: 1;
}

/*.fade-exit-active {*/
/*}*/

